# radium-engine-2.0

./: .gitignore  .gitmodules  .snyk  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  TODOS.txt  boxes.txt  main.cpp  todo.md
_doc/: debugging-and-profiling.md  platform_independence.md  rtl.md  threading.md
_doc/diagrams/saved/: MESH.drawio  a.drawio  b.drawio  componentpool.drawio  componentsystem.drawio  comsys.drawio  d.drawio  ecs-uml.drawio  ecs.drawio  eng.drawio  engine-init.drawio  execution-loop.drawio  execution.drawio  gapi.drawio  gfxctx.drawio  layers.drawio  renderapi.drawio  renderapi2.drawio  resmgr.drawio  resmgr2.drawio  resource.drawio  scene.drawio  scenegraph.drawio  scenemanager.drawio
core/: CMakeLists.txt  error.h  radium.h  types.h
core/debug/: backtrace.h  globlog.cpp  globlog.h  seh.h
core/engine/: Application.h  Config.cpp  Config.h
core/io/: file.h
core/log/: colors.cpp  colors.h  log.cpp  log.h
core/log/outputsystems/: FileOutputSystem.cpp  FileOutputSystem.h  OutputSystem.h  StdOutSystem.h  StdoutSystem.cpp
core/math/: vec2.cpp  vec2.h
core/memory/: Memory.cpp  Memory.h  PoolAllocator.h
core/rtl/: array.h  basic_string.h  copy_on_write.h  copy_on_write_old.h  copy_on_write_old_unused.h  function.h  function2.h  function_old.h  hash.h  hash_map.h  ios.h  iterator.h  readme.md  smart_ptr.h  string.cpp  string.h  utility.h  variant.h
core/system/: profiler.cpp  profiler.h  timer.h
core/thread/: mutex.h  thread.h
game/: engine.ini
game/shaders/: default.glsl  default.hlsl  default2d.glsl
main/: main.cpp
platform/: CMakeLists.txt
platform/unix/: file.cpp  unixplatformtypes.h
platform/unix/debug/: seh.cpp
platform/unix/thread/: mutex.cpp  thread.cpp
platform/windows/: CMakeLists.txt  file.cpp  timer.cpp  win32Display.cpp  win32Display.h  win32platformtypes.h
platform/windows/debug/: backtrace.h  seh.cpp
platform/windows/gl/: glPlatformInit.cpp
platform/windows/thread/: mutex.cpp  thread.cpp
renderer/: CMakeLists.txt
renderer/common/: Layout.h  RenderList.h  default.glsl  vertex.cpp  vertex.h
renderer/component/: MeshComponent.h
renderer/dx11/: dx11Buffer.h  dx11Common.h  dx11Config.h  dx11Device.cpp  dx11Device.h  dx11Shader.cpp  dx11Shader.h  dx11ShaderFactory.cpp  dx11ShaderFactory.h
renderer/dx12/: dx12Common.h  dx12Config.h  dx12Device.cpp  dx12Device.h
renderer/interface/: Buffer.h  Description.h  Display.h  DisplayInfo.h  Interface.h  RenderDevice.h  ShaderProgram.h  Texture.h
renderer/opengl/: oglBuffer.cpp  oglBuffer.h  oglBufferFactory.cpp  oglBufferFactory.h  oglDebug.cpp  oglDebug.h  oglDevice.cpp  oglDevice.h  oglTexture.cpp  oglTexture.h
renderer/opengl/shader/: oglShader.cpp  oglShader.h  oglShaderFactory.cpp  oglShaderFactory.h  oglShaderPreprocessor.cpp  oglShaderPreprocessor.h
resmgr/: CMakeLists.txt  Resource.cpp  Resource.h  ResourceError.h  ResourceManager.cpp  ResourceManager.h  ResourceManager.inl  ResourcePtr.h
resmgr/types/: Image.cpp  Image.h
scene/: CMakeLists.txt  Scene.h  SceneManager.h
scene/component/: Box2D.h  Sprite2D.h  Transform3D.h
scene/comsys/: Object.h
scene/ecs/: ComponentIdMap.h  ComponentPoolFactory.h  componentPool.h  entity.h  registry.cpp  registry.h  sparse_set.h
scene/quadtree/: QuadTree.h
tools/: check_non_localized_api_includes.sh  cl-summary.sh  countlines.sh  todofind.sh
unittest/: CMakeLists.txt  cow_test.h  fn_ptr_test.h  memory_tests.h  rtl_str_test.h  rtl_tests.h  utmain.cpp
unittest/ecs/: ecs_tests.h
unittest/rtl/: array_test.h  cow_test.h  fn_ptr_test.h  hash_map_test.h  rtl_str_test.h
